<resources>
    <string name="app_name">My Assistant</string>
    <string name="Welcome">Welcome To My Assistant</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="User">User</string>
    <string name="Doctor">Doctor</string>
    <string name="emailadd">EmailAddress</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="RegSign">If Registered Sign In, else Register</string>
    <string name="Register">Register</string>

</resources>
