<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="freelancegks.myassistant.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/Welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/welcome"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <TextView
            android:text="@string/RegSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Login"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/blank2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/EmailAdd"
            android:hint= "@string/emailadd"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:cursorVisible="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:id="@+id/pwd"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:text="@string/SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:onClick="onloginclick"/>

        <Button
            android:text="@string/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2" />

    </LinearLayout>

</RelativeLayout>
